--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://8.130.113.22:3306/cy_community?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/cy_community?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
     type: com.zaxxer.hikari.HikariDataSource
   #Email 配置
   mail:
@@ -62,3 +62,10 @@ logging:
   level:
     root: info
     com.wcy: debug
+
+
+## 自定义配置
+#interfaceAccess:
+#  second: 100        # 接口访问second秒内最多只能访问time次
+#  time: 3
+#  lockTime: 120      # 禁用时长--单位/秒
