--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
         </dependency>
 
 <!--        springsecurity-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 <!--        redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
