--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -11,6 +11,19 @@ spring:
     password: 123456
     url: jdbc:mysql://127.0.0.1:3306/cy_community?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
     type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      auto-commit: true
+        #空闲连接超时时长
+      idle-timeout: 60000
+        #连接超时时长
+      connection-timeout: 60000
+        #最大生命周期，0不过期
+      max-lifetime: 0
+        #最小空闲连接数
+      minimum-idle: 10
+        #最大连接数量
+      maximum-pool-size: 10
+
   #Email 配置
   mail:
     protocol: smtp
